Update introspect to use bearer token
